--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@ ul{
 .top-banner{
     background-image: url(./assests/asset\ 32.png );
     background-color:  #e74694;
+    background-repeat: repeat;
     
 }
 .banner-text{
@@ -184,6 +185,9 @@ header{
     text-align: center;
 
 }
+.features-card img{
+    width: 60px;
+}
 
 /* Bg-feature-section */
 .big-feature-section{
@@ -249,4 +253,47 @@ header{
  color: aliceblue;
 
 
+}
+.cta-section-container{
+    flex-direction: column;
+    gap: 30px;
+    color: white;
+    
+}
+.cta-section{
+    padding: 120px var(--padding-inline-section) 80px;
+    background-color: #183b54;
+   
+}
+.cta-section-container p{
+    color: white;
+    margin-top: 20px;
+}
+
+/* FOOTER */
+footer{
+    padding-block:80px ;
+    background-color: #ebf2fa;
+
+}
+
+.link-column{
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+.footer-container{
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+/* Sub-footer */
+
+.subfooter{
+    background-color: #b9cde4;
+    padding: var(--padding-inline-section);
+}
+.subfooter-container{
+    justify-content: center;
+    gap: 30px;
 }
